implementation i18n (EN/FR/NL) frontend + backend
- Config i18next avec detection navigateur et persistance localStorage
- Intercepteur Axios Accept-Language pour synchroniser avec le backend
- Composants selectors, viewers, pages et sidebar traduits
- Contenu Home (home.en.js, home.nl.js, home.structure.js)
- Backend: DTOs records, config CORS/locale/security, MessageSource i18n
- Tests unitaires (ValidationService, StatsCalculator,
IndividualCatalog, FileController)
- SolarSystem Three.js, ExportMenu, PermalienButton, DetailPanel
traduits